Update gulp files and calls to css and js files form index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 
-	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="dist/css/styles.css" />
 </head>
 <body>
 
@@ -279,6 +279,6 @@
 		<p class="copyright animated wow fadeIn" data-wow-duration="2s"> <strong>Pixelhint</strong>
 	</footer>
 	<!--  End Footer Section  -->
-	<script type="text/javascript" src="js/logic.js"></script>
+	<script type="text/javascript" src="dist/js/logic.js"></script>
 </body>
 </html>
